fix: dialog z-index & action button styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,15 +50,15 @@ main {
 }
 
 /* Action style */
-.action {
+.action.fetch {
     background-color: #66BB6A;
     font-size: 16px;
     padding: 10px 20px;
     border-radius: 6px;
-    margin: 10px 0;
+    margin: 10px auto;
 }
 
-.action:hover {
+.action.fetch:hover {
     background-color: #4CAF50;
 }
 
@@ -131,9 +131,10 @@ figcaption {
 
 .popup.open {
     visibility: visible;
+    z-index: 1;
 }
 
-.action {
+.action.close {
     position: absolute;
     top: 50px;
     right: 50px;
